--- a/index.html
+++ b/index.html
@@ -5,18 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Text To Speech</title>
+    <style>
+      body {
+        width: 95%;
+        margin: 0 auto;
+        margin-top: 1rem;
+      }
+      #text {
+        width: 100%;
+        height: 80vh;
+      }
+    </style>
   </head>
   <body>
-    <textarea id="text"></textarea>
     <label for="speed"></label>
     <input
       type="number"
       id="speed"
       name="spee"
       min="0.5"
-      max="2.5"
-      step="0.5"
+      max="2.75"
+      step="0.25"
+      value="1"
     />
+    <button id="playbtn">Play</button>
+    <button id="pausebtn">Pause</button>
+    <button id="stopbtn">Stop</button>
+    <br />
+    <textarea id="text"></textarea>
   </body>
 </html>
 <script src="./index.js"></script>
