--- a/index.html
+++ b/index.html
@@ -15,23 +15,27 @@
         width: 100%;
         height: 80vh;
       }
+      #container {
+        text-align: center;
+      }
     </style>
   </head>
   <body>
-    <label for="speed"></label>
-    <input
-      type="number"
-      id="speed"
-      name="spee"
-      min="0.5"
-      max="2.75"
-      step="0.25"
-      value="1"
-    />
-    <button id="playbtn">Play</button>
-    <button id="pausebtn">Pause</button>
-    <button id="stopbtn">Stop</button>
-    <br />
+    <div id="container">
+      <label for="speed">Speed</label>
+      <input
+        type="number"
+        id="speed"
+        name="spee"
+        min="0.5"
+        max="2.75"
+        step="0.25"
+        value="1"
+      />
+      <button id="playbtn">Play</button>
+      <button id="pausebtn">Pause</button>
+      <button id="stopbtn">Stop</button>
+    </div>
     <textarea id="text"></textarea>
   </body>
 </html>
