--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         width: 95%;
         margin: 0 auto;
         margin-top: 1rem;
+        background-color: #effffd;
       }
       #text {
         width: 100%;
@@ -18,11 +19,57 @@
       #container {
         text-align: center;
       }
+      input {
+        text-align: center;
+        width: 50px;
+        height: 25px;
+        font-weight: 900;
+      }
+      button {
+        font-family: "Source Sans Pro", sans-serif;
+        font-weight: 800;
+        padding: 0.5rem 0.5rem;
+        font-size: 0.9rem;
+        cursor: pointer;
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+        background-color: #ffffff;
+        color: #f50057;
+        border: 2px solid #f50057;
+        transition: 0.2s ease;
+        margin-left: 10px;
+      }
+      button:hover {
+        border-radius: 2rem;
+      }
+      .rainbow {
+        background-color: #343a40;
+        border-radius: 16px;
+        color: #fff;
+        cursor: pointer;
+        padding: 12px 32px;
+        background-image: linear-gradient(
+          90deg,
+          #00c0ff 0%,
+          #ffcf00 49%,
+          #fc4f4f 80%,
+          #00c0ff 100%
+        );
+        animation: slide 3s linear infinite;
+      }
     </style>
+    <script
+      type="module"
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+    ></script>
+    <script
+      nomodule
+      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+    ></script>
   </head>
   <body>
     <div id="container">
-      <label for="speed">Speed</label>
+      <label for="speed" class="rainbow">Speed</label>
       <input
         type="number"
         id="speed"
@@ -32,9 +79,15 @@
         step="0.25"
         value="1"
       />
-      <button id="playbtn">Play</button>
-      <button id="pausebtn">Pause</button>
-      <button id="stopbtn">Stop</button>
+      <button id="playbtn">
+        Play<ion-icon name="play-circle-outline"></ion-icon>
+      </button>
+      <button id="pausebtn">
+        Pause<ion-icon name="pause-circle-outline"></ion-icon>
+      </button>
+      <button id="stopbtn">
+        Stop<ion-icon name="stop-circle-outline"></ion-icon>
+      </button>
     </div>
     <textarea id="text"></textarea>
   </body>
