--- a/index.html
+++ b/index.html
@@ -42,6 +42,26 @@
       button:hover {
         border-radius: 2rem;
       }
+      select {
+        font-family: "Source Sans Pro", sans-serif;
+        font-weight: 800;
+        padding: 0.5rem 0.5rem;
+        font-size: 0.9rem;
+        cursor: pointer;
+        text-transform: uppercase;
+        letter-spacing: 0.05em;
+        background-color: #ffffff;
+        color: #f50057;
+        border: 2px solid #f50057;
+        transition: 0.2s ease;
+        margin-left: 10px;
+      }
+      select:hover {
+        border-radius: 2rem;
+      }
+      select > option {
+        font-size: 15px;
+      }
       .rainbow {
         background-color: #343a40;
         border-radius: 16px;
@@ -88,6 +108,25 @@
       <button id="stopbtn">
         Stop<ion-icon name="stop-circle-outline"></ion-icon>
       </button>
+      <select id="outlangs">
+        <option value="en">English</option>
+        <option value="ar">Arabic</option>
+        <option value="zh">Chinese</option>
+        <option value="fr">French</option>
+        <option value="de">German</option>
+        <option value="hi">Hindi</option>
+        <option value="id">Indonesian</option>
+        <option value="ga">Irish</option>
+        <option value="it">Italian</option>
+        <option value="ja">Japanese</option>
+        <option value="ko">Korean</option>
+        <option value="pl">Polish</option>
+        <option value="pt">Portuguese</option>
+        <option value="ru">Russian</option>
+        <option value="es">Spanish</option>
+        <option value="tr">Turkish</option>
+        <option value="vi">Vietnamese</option>
+      </select>
     </div>
     <textarea id="text"></textarea>
   </body>
