--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
       input {
         text-align: center;
         width: 50px;
-        height: 25px;
+        height: 32px;
+        font-size: 15px;
         font-weight: 900;
+        border: 2px solid #f50057;
+        color: #f50057;
       }
       button {
         font-family: "Source Sans Pro", sans-serif;
@@ -110,11 +113,12 @@
       </button>
       <select id="outlangs">
         <option value="en">English</option>
+        <option value="hi">Hindi</option>
+        <option value="hi">Marathi</option>
         <option value="ar">Arabic</option>
         <option value="zh">Chinese</option>
         <option value="fr">French</option>
         <option value="de">German</option>
-        <option value="hi">Hindi</option>
         <option value="id">Indonesian</option>
         <option value="ga">Irish</option>
         <option value="it">Italian</option>
