--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
       body {
         width: 95%;
         margin: 0 auto;
-        margin-top: 1rem;
+        margin-top: 0.5rem;
         background-color: #effffd;
       }
       #text {
         width: 100%;
-        height: 80vh;
+        height: 87vh;
       }
       #container {
         text-align: center;
@@ -27,6 +27,9 @@
         font-weight: 900;
         border: 2px solid #f50057;
         color: #f50057;
+      }
+      input:hover {
+        border-radius: 1rem;
       }
       button {
         font-family: "Source Sans Pro", sans-serif;
@@ -70,7 +73,8 @@
         border-radius: 16px;
         color: #fff;
         cursor: pointer;
-        padding: 12px 32px;
+        padding: 8px 22px;
+        font-size: 19px;
         background-image: linear-gradient(
           90deg,
           #00c0ff 0%,
@@ -79,6 +83,65 @@
           #00c0ff 100%
         );
         animation: slide 3s linear infinite;
+      }
+      .animate-charcter {
+        text-transform: uppercase;
+        background-image: linear-gradient(
+          -225deg,
+          #231557 0%,
+          #44107a 29%,
+          #ff1361 67%,
+          #fff800 100%
+        );
+        background-size: auto auto;
+        background-clip: border-box;
+        background-size: 200% auto;
+        color: #fff;
+        background-clip: text;
+        text-fill-color: transparent;
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+        animation: textclip 2s linear infinite;
+        display: inline-block;
+        font-size: 25px;
+        margin-top: -5px;
+        margin-bottom: -10px;
+        text-align: center;
+        margin-left: 43%;
+      }
+
+      @media screen and (max-width: 1300px) {
+        .animate-charcter {
+          margin-left: 45%;
+        }
+      }
+      @media screen and (max-width: 900px) {
+        .animate-charcter {
+          margin-left: 40%;
+        }
+      }
+      @media screen and (max-width: 830px) {
+        .animate-charcter {
+          margin-left: 30%;
+        }
+      }
+      @media screen and (max-width: 650px) {
+        .animate-charcter {
+          margin-left: 20%;
+        }
+      }
+      @media screen and (max-width: 360px) {
+        .animate-charcter {
+          margin-left: 15%;
+        }
+        #container {
+          width: 112%;
+        }
+      }
+      @keyframes textclip {
+        to {
+          background-position: 200% center;
+        }
       }
     </style>
     <script
@@ -91,6 +154,9 @@
     ></script>
   </head>
   <body>
+    <div class="container" style="margin: auto">
+      <h3 class="animate-charcter">Text To Speech</h3>
+    </div>
     <div id="container">
       <label for="speed" class="rainbow">Speed</label>
       <input
